crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__cargo_fix_converges_without_losing_content.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: "normalize_workspace_paths(fixture.path(), output.clone())"
---
✖ Checks failed · 2 errors · fixed 1 file

crates/core/Cargo.toml
  1:1  ✖ publishable Cargo package depends on unpublished workspace package `private-dep` in [dependencies]
         cargo/publishable-dependencies
  1:1  ✖ missing required package field `license`
         cargo/required-package-fields
