crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__cargo_fix_single_pass_applies_one_rewrite_per_file.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
✖ Checks failed · 7 errors · 5 fixable · fixed 3 files

crates/core/Cargo.toml
  1:1  ✖ internal dependency `utils` should use workspace = true
         cargo/internal-dependency-workspace · fixable
  1:1  ✖ internal dependency `private-dep` should use workspace = true
         cargo/internal-dependency-workspace · fixable
  1:1  ✖ repository field is "https://wrong.example.com/core" but should be "https://github.com/acme/lint-rules/tree/main/crates/core"
         cargo/manifest-repository · fixable
  1:1  ✖ publishable Cargo package depends on unpublished workspace package `private-dep` in [dependencies]
         cargo/publishable-dependencies
  1:1  ✖ missing required package field `license`
         cargo/required-package-fields
  1:1  ✖ dependencies in `dependencies` are not sorted alphabetically
         cargo/sorted-dependencies · fixable
  1:1  ✖ dependencies in `dev-dependencies` are not sorted alphabetically
         cargo/sorted-dependencies · fixable

5 issues are still auto-fixable; run `monochange check --fix` again.
