crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__cargo_fixpoint_utils_manifest.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: utils
---
[package]
name = "utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Utils lint fixture package"
repository = "https://github.com/acme/lint-rules/tree/main/crates/utils"
