crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__cargo_lint_reports_every_rule_without_fix.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
✖ Checks failed · 11 errors · 9 fixable

crates/core/Cargo.toml
  1:1  ✖ dependency `utils` has fields in the wrong order; put workspace/version first, then default-features, then features
         cargo/dependency-field-order · fixable
  1:1  ✖ dependency `private-dep` has fields in the wrong order; put workspace/version first, then default-features, then features
         cargo/dependency-field-order · fixable
  1:1  ✖ internal dependency `utils` should use workspace = true
         cargo/internal-dependency-workspace · fixable
  1:1  ✖ internal dependency `private-dep` should use workspace = true
         cargo/internal-dependency-workspace · fixable
  1:1  ✖ repository field is "https://wrong.example.com/core" but should be "https://github.com/acme/lint-rules/tree/main/crates/core"
         cargo/manifest-repository · fixable
  1:1  ✖ publishable Cargo package depends on unpublished workspace package `private-dep` in [dependencies]
         cargo/publishable-dependencies
  1:1  ✖ missing required package field `license`
         cargo/required-package-fields
  1:1  ✖ dependencies in `dependencies` are not sorted alphabetically
         cargo/sorted-dependencies · fixable
  1:1  ✖ dependencies in `dev-dependencies` are not sorted alphabetically
         cargo/sorted-dependencies · fixable

crates/orphan/Cargo.toml
  1:1  ✖ unmanaged Cargo packages must set publish = false or be declared in monochange.toml
         cargo/unlisted-package-private · fixable

crates/utils/Cargo.toml
  1:1  ✖ workspace-inherited repository resolves to "https://github.com/acme/lint-rules" but should be "https://github.com/acme/lint-rules/tree/main/crates/utils"
         cargo/manifest-repository · fixable

Run `monochange check --fix` to fix 9 issues automatically.
