crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__changesets_fix_converts_object_form_to_inline_without_touching_bodies.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: "normalize_workspace_paths(fixture.path(), output.clone())"
---
✖ Checks failed · 2 errors · fixed 2 files

.changeset/missing-heading.md
  1:1  ✖ changeset body must start with a summary heading
         changesets/summary

.changeset/section-headings.md
  1:1  ✖ changeset type `fix` must not also be used as a heading
         changesets/no_section_headings
