crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__changesets_fixpoint_clean_changeset.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: clean
---
---
shared: patch
---

## Keep this changeset clean

Nothing here should trip any changeset lint rule.
