crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__changesets_fixpoint_object_form.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: object_form
---
---
app: feat
---

## Add object form conversion

The frontmatter uses object form, which prefer-inline converts to inline.
