crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__changesets_fixpoint_section_headings.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: section_headings
---
---
app: fix
---

## Fix

Something changed but the body uses the change type as a section heading.
