crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__changesets_lint_reports_every_rule_without_fix.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
✖ Checks failed · 4 errors · 2 fixable

.changeset/missing-heading.md
  1:1  ✖ changeset body must start with a summary heading
         changesets/summary

.changeset/object-form.md
  2:5  ✖ changeset entry for `app` repeats a bump that type `feat` already implies; use the inline form `app: feat`
         changesets/prefer-inline · fixable

.changeset/section-headings.md
  1:1  ✖ changeset type `fix` must not also be used as a heading
         changesets/no_section_headings
  2:5  ✖ changeset entry for `app` repeats a bump that type `fix` already implies; use the inline form `app: fix`
         changesets/prefer-inline · fixable

Run `monochange check --fix` to fix 2 issues automatically.
